fixtures/valid/decode.scl
value0 = "1"
value1 = 1
value2 = ["a", "b", "c"]
