fixtures/invalid/decode.scl
value2 = ["a","b","c"
